force-app/main/default/objects/Curso__c/Curso__c.object-meta.xml
<CustomObject>
    <label>Curso</label>
    <nameField>
        <label>Curso Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cursos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>