force-app/main/default/objects/Curso__c/fields/Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Ciclo__c</fullName>
    <label>Ciclo</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>