force-app/main/default/objects/Curso__c/fields/Con_cupo__c.field-meta.xml
<CustomField>
    <fullName>Con_cupo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Con cupo</label>
    <type>Checkbox</type>
</CustomField>