force-app/main/default/objects/Curso__c/fields/Creditos__c.field-meta.xml
<CustomField>
    <fullName>Creditos__c</fullName>
    <label>Creditos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>