force-app/main/default/objects/Curso__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Descripcion de pet si es doméstico o salvaje</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>