force-app/main/default/objects/Curso__c/fields/Docente__c.field-meta.xml
<CustomField>
    <fullName>Docente__c</fullName>
    <label>Docente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr Newman</fullName>
            </value>
            <value>
                <fullName>Dr Perez Albela</fullName>
            </value>
            <value>
                <fullName>Mg Ana Alita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>