force-app/main/default/objects/Curso__c/fields/Ideal_Max_Alum__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Max_Alum__c</fullName>
    <inlineHelpText>Edad que debe tener tu mascota</inlineHelpText>
    <label>Ideal Max Alum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>