force-app/main/default/objects/Curso__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Lugar donde vivira tu mascota</inlineHelpText>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Grabado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>