force-app/main/default/objects/Curso__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
                <default>true</default>
                <label>Nacional</label>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>