force-app/main/default/objects/Curso__c/recordTypes/Universidad.recordType-meta.xml
<RecordType>
    <fullName>Universidad</fullName>
    <active>true</active>
    <label>Universidad</label>
</RecordType>