force-app/main/default/objects/Curso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Docente__c</columns>
    <columns>Ciclo__c</columns>
    <columns>Creditos__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>